1998-09-28  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot2): New test, tests some nested directory
	cases.

1998-09-25  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot): Change a few comments which said modules
	when they meant directories.

1998-09-25  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (devcom-180): Add 0-9 to the range of characters allowed
	in hostname regexp.

1998-09-25  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (log2): New test log2-7a tests for one error handling
	case.  Add a comment about another.

1998-09-24  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Change crerepos test back to :ext: (for several
	reasons; see comments).

1998-09-24  Noel Cragg  <noel@swish.red-bean.com>

	* sanity.sh (rcslib-symlink-5, rcslib-symlink-6): new tests to
	check the operation of "tag" when there are symlinks in the
	repository.

	* rcs.c (RCS_checkin): remove old code that resolved the symlink
	and call resolve_symlink instead.
	(RCS_rewrite): call resolve_symlink before doing anything else to
	make sure we're operating on the file and not the symlink.

	* subr.c (resolve_symlink): new routine -- resolves a symbolic
	link chain to its destination.
	* cvs.h: add prototype.

	* sanity.sh (basica-6.2, basica-6.3): changed match expressions to
	reflect new diff output.

	* rcs.c (make_file_label): generate labels for files that include
	the pathname so that output from "cvs diff" is useable by patch.
	Looks like I came up with the mods as Andy Piper
	<andyp@parallax.co.uk>; his patch was on the Cyclic unofficial
	patches page.

	* sanity.sh: change remote access method from ext to fork.  This
	results in a significant speed improvement when running the
	testsuite.  The ext method on my machine (i586 120MHz Linux 2.0.35
	with TCP wrappers installed) runs in 450% of the time of the local
	method while the fork method runs in only 150% of the time of the
	local method!  Yow!  Am I SWAPPING yet?!